# tweety

./: .editorconfig  .env.dev  README.md  oidc-dev.key  openapi.yml  pyproject.toml
.github/workflows/: python_django_ci.yml
apps/tweets/: models.py  schema.py  urls.py
apps/tweets/migrations/: 0002_remove_tweet_in_reply_to_user.py
apps/tweets/tests/: factories.py  test_views.py
apps/users/: models.py  schema.py  urls.py  views.py
apps/users/fixtures/: users.yaml
apps/users/migrations/: 0002_auto_20211128_1921.py
apps/users/tests/: test_admin.py
backend/: .env.example  .flake8  .gitignore  README.md  docker-compose.yml  mypy.ini  noxfile.py  pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/apps/users/: models.py
backend/apps/users/migrations/: 0002_auto_20210815_2217.py  0003_user_birth_date.py
backend/apps/users/tests/: test_admin.py
backend/config/: settings.py  urls.py
backend/python_django/: .env.dev  .flake8  .gitignore  README.md  docker-compose.yml  noxfile.py  openapi-schema.yml  openapi.yml  pyproject.toml
backend/python_django/apps/: __init__.py  conftest.py
backend/python_django/apps/api/: __init__.py  apps.py  v1_urls.py
backend/python_django/apps/tweets/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/python_django/apps/tweets/migrations/: 0001_initial.py  0003_alter_tweet_in_reply_to_status.py
backend/python_django/apps/tweets/tests/: factories.py
backend/python_django/apps/users/: __init__.py  admin.py  apps.py  forms.py  models.py  schema.py  serializers.py  urls.py  views.py
backend/python_django/apps/users/migrations/: 0001_initial.py  0002_auto_20210815_2217.py  0003_follow_users_follow_prevent_self_follow.py  0004_auto_20211128_1948.py
backend/python_django/apps/users/tests/: conftest.py  factories.py  test_admin.py  test_forms.py  test_models.py  test_urls.py  test_views.py
backend/python_django/config/: asgi.py  oauth2_scopes.py  router.py  settings.py  urls.py  wsgi.py
backend/python_django/docker/django/: Dockerfile
config/: urls.py
docker/django/: Dockerfile
frontend/vue/: package.json  tailwind.config.js
frontend/vue/public/: index.html
frontend/vue/src/: main.ts  types.ts
frontend/vue/src/assets/scss/: index.scss
frontend/vue/src/components/: Button.vue  Input.vue  Select.vue
frontend/vue/src/components/home/: Navbar.vue  Sidebar.vue  Timeline.vue  TweetInput.vue
frontend/vue/src/composables/: useFocus.ts
frontend/vue/src/router/: index.ts
frontend/vue/src/views/: Home.vue  Login.vue  SignUp.vue  Welcome.vue
