[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "tweety"
version = "0.1.0"
description = "A Twitter clone web app"
authors = ["Ahmad <zoaby.am@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.6"
django-environ = "0.4.5"
django-extensions = "3.1.3"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-django = "^4.4.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.12.1"
pre-commit = "^2.14.0"
coverage = "^5.5"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
mypy = "^0.910"
black = "^21.7b0"
isort = "^5.9.3"
factory-boy = "^3.2.0"
django-debug-toolbar = "^3.2.2"
django-stubs = "^1.8.0"
dennis = "^0.9"
dotenv-linter = "^0.2.0"
nplusone = "^1.0.0"
safety = "^1.10.3"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov --cov-report=html --ds=config.settings --reuse-db"
python_files = "tests.py test_*.py"
norecursedirs = ".tox .git */migrations/* */static/* docs venv"


[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 90


[tool.isort]
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true
